# liquid

./: .clang-format  .editorconfig  .gitattributes  .gitignore  Array.cpp  AstNode.cpp  AstNode.h  CMakeLists.txt  ClassDeclaration.cpp  ClassDeclaration.h  CodeGenContext.cpp  CodeGenContext.h  Declaration.cpp  Doxyfile  FunctionDeclaration.cpp  FunctionDeclaration.h  GetOpt.cpp  GetOpt.h  List.cpp  README.md  Range.cpp  Visitor.h  VisitorPrettyPrint.cpp  VisitorPrettyPrint.h  VisitorSyntaxCheck.cpp  VisitorSyntaxCheck.h  buildins.cpp  config.in  main.cpp  parser.y  tokens.l
src/: Array.cpp  Array.h  Assignment.cpp  Assignment.h  AstNode.cpp  AstNode.h  BinaryOperator.cpp  BinaryOperator.h  CMakeLists.txt  ClassDeclaration.cpp  ClassDeclaration.h  CodeGenContext.cpp  CodeGenContext.h  CompareOperator.cpp  CompareOperator.h  Conditional.cpp  Conditional.h  Declaration.cpp  Declaration.h  FunctionDeclaration.cpp  FunctionDeclaration.h  GetOpt.cpp  GetOpt.h  MethodCall.cpp  MethodCall.h  Range.cpp  Range.h  Return.cpp  Return.h  UnaryOperator.cpp  UnaryOperator.h  Visitor.h  VisitorPrettyPrint.cpp  VisitorPrettyPrint.h  VisitorSyntaxCheck.cpp  VisitorSyntaxCheck.h  WhileLoop.cpp  WhileLoop.h  buildins.cpp  buildins.h  (+4 more)
test_samples/: incl.liq  test.liq  test_array.liq  test_class.liq  test_class_ctor.liq  test_class_member_init.liq  test_crash.liq  test_double.liq  test_full.liq  test_func_var_args.liq  test_gep.liq  test_if.liq  test_if_scope.liq  test_import.liq  test_overwrite_decl.liq  test_range.liq  test_var.liq
